--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -47,6 +47,7 @@
   }
 
   label.item-input.item-stacked-label,
+  .label.item-input.item-stacked-label,
   label.item-input.item-select,
   label.item-input.item-radio,
   .item-toggle {
