--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -66,7 +66,7 @@ ion-modal-view.item-form
             span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
           show-error(array-messages='modalVm.messages.unidad_medida')
 
-        label.item.item-input.item-stacked-label(
+        .label.item.item-input.item-stacked-label(
           ng-class="{'item-error': modalVm.itemForm.precio.$touched && modalVm.itemForm.precio.$invalid}"
         )
           span.input-label
