--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -79,11 +79,11 @@ ion-side-menus(enable-menu-with-back-views='false')
 
         ion-item.item-complex.switch-user-role
           .item-content {{::("menu.changeTo"|translate)}}
-        ion-item.user-type(menu-close=''  ui-sref='app.provider.welcome',ng-if='!user.provider_profile && !user.courier_profile')
+        ion-item.user-type(menu-close=''  ui-sref='app.provider.welcome',ng-if='!user.provider_profile')
           | {{::("menu.user.provider"|translate)}}
         ion-item.user-type(menu-close='' ui-sref='provider.items.index', ng-if='user.provider_profile')
           | {{::("menu.user.provider"|translate)}}
-        ion-item.user-type(menu-close='' ui-sref='app.courier.welcome', ng-if='!user.provider_profile && !user.courier_profile')
+        ion-item.user-type(menu-close='' ui-sref='app.courier.welcome', ng-if='!user.courier_profile')
           | {{::("menu.user.courier"|translate)}}
         ion-item.user-type(menu-close='' ui-sref='courier.orders', ng-if='user.courier_profile')
           | {{::("menu.user.courier"|translate)}}
