--- a/app/templates/menu/menu-provider.jade
+++ b/app/templates/menu/menu-provider.jade
@@ -65,3 +65,5 @@ ion-side-menus(enable-menu-with-back-views='false')
           ui-sref='app.categories.index'
         )
           | {{::("menu.user.buyer"|translate)}}
+        ion-item.user-type(menu-close='' ui-sref='courier.orders', ng-if='user.courier_profile')
+          | {{::("menu.user.courier"|translate)}}
