--- a/app/styles/tabs/index.scss
+++ b/app/styles/tabs/index.scss
@@ -26,7 +26,7 @@
   .tab-item-active{
     opacity: 1;
     border-style: solid !important;
-    border-color: #FDC30D !important;
+    border-color: #fbaf3f !important;
     border-width: 0 0 3px 0 !important;
   }
 }
