--- a/app/styles/colors/colors.scss
+++ b/app/styles/colors/colors.scss
@@ -1,6 +1,7 @@
 $white: #fff;
 $base-yellow: #fbaf3f;
 // $base-yellow: #f05a28;
+$base-orange: #f05a28;
 $base-blue: #9ecaed;
 $base-grey: #6A6A6D;
 $grey-secondary: #999;
