--- a/app/styles/login/general.scss
+++ b/app/styles/login/general.scss
@@ -1,6 +1,6 @@
 .login-form {
   .scroll {
-    padding-bottom: 20px;
+    padding-bottom: 80px;
   }
 
   .moviggo-logo-1 {
@@ -49,6 +49,7 @@
 
   &.bar.bar-light.bar-footer {
     background: none;
+    background-color: $white;
   }
 }
 
