--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -3,25 +3,31 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
     .list
       .list-logo.above.logo-compra
       .list-logo.below.logo-bolsa
+    .intro-title-copytext
+      | compra
     .row.intro-copytext-wrapper
       .intro-copytext
-        | Consigue lo que quieras, cuando quieras y en donde lo quieras, ¡Simple!
+        | consigue lo que quieras, cuando quieras y donde lo quieras
 
   ion-slide
     .list
       .list-logo.above.logo-vende
       .list-logo.below.logo-precio
+    .intro-title-copytext
+      | vende
     .row.intro-copytext-wrapper
       .intro-copytext
-        | Dales a tus clientes lo que deseen, cuando lo deseen, donde ellos lo deseen, ¡Simple!
+        | dales a tus clientes lo que deseen, cuando lo deseen, donde ellos lo deseen
 
   ion-slide
     .list
       .list-logo.above.logo-envia
       .list-logo.below.logo-cohete
+    .intro-title-copytext
+      | entrega
     .row.intro-copytext-wrapper
       .intro-copytext
-        | No te preocupes, el trabajo difícil lo hacemos por ti, ¡Simple!
+        | no te preocupes, el trabajo difícil lo hacemos por ti
 
 .bar.bar-footer.bar-intro-button
   button.intro-button.common-button.button.no-animation(ng-click="introVm.next()" ng-if="introVm.slideIndex != 2")
