--- a/app/templates/provider/welcome.jade
+++ b/app/templates/provider/welcome.jade
@@ -9,9 +9,9 @@ ion-view(
     .row
       .list.list-inset.common-text
         h1.title Conviértete en Vendedor
-        p Con moviggo puedes vender tus productos de manera rápida y sencilla
+        p vende tus productos de manera rápida y sencilla
     .row
       .list.list-inset.list--centered
-        a.button.button-outline.button-energized(
+        a.button.button-outline.button-default-action(
           ui-sref='app.provider.new'
         ) Empezar
