--- a/app/templates/billing-addresses/index.jade
+++ b/app/templates/billing-addresses/index.jade
@@ -3,31 +3,36 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.billing-addresses-list
-    .row.col.text-center
-      button.button.button-outline.button-energized(
-        ng-click="billingAddressesVm.showNewModal()"
-      ) {{::("billingAddress.newBillingAddress"|translate)}}
-
+  ion-content.resource-collection
     .row
-      .col.col-30
-        strong {{::("client.ruc"|translate)}}
-      .col.col-30
-        strong {{::("provider.businessName"|translate)}}
-      .col.col-30
-        strong {{::("client.direccion"|translate)}}
-      .col.col-10
+      .list.list--centered
+        button.button.button-outline.button-default-action(
+          ng-click="billingAddressesVm.showNewModal()"
+        ) {{::("billingAddress.newBillingAddress"|translate)}}
+      
+    .list.list-inset.list--no-borders.resource-collection-table
+      .row.table-headers
+        .col.col-30
+          strong {{::("client.ruc"|translate)}}
+        .col.col-30
+          strong {{::("provider.businessName"|translate)}}
+        .col.col-30
+          strong {{::("client.direccion"|translate)}}
+        .col
 
-    .row.col
-        hr
+      .item.row(
+        ng-repeat='item in billingAddressesVm.billingAddresses'
+      )
+        .col.col-30 {{ ::item.ruc}}
+        .col.col-30 {{ ::item.razon_social}}
+        .col.col-30 {{ ::item.direccion}}
+        .col.col-10
+          a.action(
+            ng-click='billingAddressesVm.showEditModal(item, $index)'
+          )
+            | {{::("globals.edit"|translate)}}
 
-    .row(ng-repeat='item in billingAddressesVm.billingAddresses')
-      .col.col-30 {{item.ruc}}
-      .col.col-30 {{item.razon_social}}
-      .col.col-30 {{item.direccion}}
-      .col.col-10
-        a.action(ng-click='billingAddressesVm.showEditModal(item, $index)')
-          | {{::("globals.edit"|translate)}}
-
-    .row.col.text-center(ng-show="billingAddressesVm.billingAddresses.length==0")
-      h5.data {{::("billingAddress.anyBillingAddress"|translate)}}
+      .col.without-items(
+        ng-if="billingAddressesVm.billingAddresses.length === 0"
+      )
+        p {{::("billingAddress.anyBillingAddress"|translate)}}
