--- a/app/templates/profile/info/info.jade
+++ b/app/templates/profile/info/info.jade
@@ -26,7 +26,9 @@ ion-view(
       )
         .col.col-50.label {{::("user.age"|translate)}}
         .col.col-50.value {{piVm.user.fecha_nacimiento | age}}
-      .row
+      .row(
+        ng-if="piVm.user.ciudad"
+      )
         .col.col-50.label {{::("user.country"|translate)}}
         .col.col-50.value {{piVm.user.ciudad}}
 
