--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -16,19 +16,27 @@ ion-side-menus(enable-menu-with-back-views='false')
           )
         
         ion-item.item-complex
-          .item-content {{ ::( "menu.client.services" | translate ) }}
-          ion-item.gray-item(
-            menu-close=''
-            ui-sref='app.services.shippings'
-          )
-            li
-              .inner-content {{ ::('menu.client.shippings' | translate) }}
+          .item-content
+            i.icon.ion-home
+            | {{ ::( "globals.index" | translate ) }}
+        ion-item.gray-item(
+          menu-close=''
+          ui-sref='app.services.providers'
+        )
+          li
+            .inner-content {{ ::('menu.client.providers' | translate) }}
+        ion-item.gray-item(
+          menu-close=''
+          ui-sref='app.categories.index'
+        )
+          li
+            .inner-content {{ ::("menu.client.category" | translate) }}
 
         //- hide categories for now
           ion-item(
             menu-close=''
             ui-sref='app.categories.index'
-          ) {{::("menu.client.category"|translate)}}
+          ) {{ ::("menu.client.category" | translate) }}
           sidebar-only-on-categories
             ion-item.gray-item(
               ng-repeat='categorie in menuVm.categories'
@@ -43,7 +51,9 @@ ion-side-menus(enable-menu-with-back-views='false')
             | {{::("menu.client.cart"|translate)}}
 
         ion-item.item-complex
-          .item-content {{::("menu.account"|translate)}}
+          .item-content
+            i.icon.ion-person
+            | {{::("menu.account"|translate)}}
         ion-item.gray-item(
           menu-close=''
           ui-sref='app.customerorders.index'
@@ -79,6 +89,7 @@ ion-side-menus(enable-menu-with-back-views='false')
                 | {{::("menu.client.payments"|translate)}}
 
         ion-item(menu-close='' ui-sref='app.places.index')
+          i.icon.ion-location
           | {{::("menu.locations"|translate)}}
 
         //- not built yet
@@ -89,10 +100,14 @@ ion-side-menus(enable-menu-with-back-views='false')
           ng-controller='LoginController as loginVm'
           ng-click='loginVm.logout()'
         )
-          .item-content {{::("menu.logout"|translate)}}
+          .item-content
+            i.icon.ion-power
+            | {{::("menu.logout"|translate)}}
 
         ion-item.item-complex.switch-user-role
-          .item-content {{::("menu.changeTo"|translate)}}
+          .item-content
+            i.icon.ion-arrow-swap
+            | {{::("menu.changeTo"|translate)}}
         ion-item.user-type(menu-close=''  ui-sref='app.provider.welcome',ng-if='!user.provider_profile')
           | {{::("menu.user.provider"|translate)}}
         ion-item.user-type(menu-close='' ui-sref='provider.items.index', ng-if='user.provider_profile')
