--- a/app/styles/main/main-sidebar.scss
+++ b/app/styles/main/main-sidebar.scss
@@ -14,18 +14,30 @@
       padding-bottom: 15px;
     }
 
-    &.gray-item .item-content {
-      background-color: $light-grey;
+    &.gray-item {
+      margin-top: -5px;
+      padding-bottom: 20px;
+
+      .item-content {
+        padding-left: 30px;
+        background-color: $light-grey;
+      }
     }
 
     .item-content {
       padding-top: 10px;
       padding-bottom: 8px;
-      padding-left: 30px;
+      padding-left: 20px;
       position: relative;
 
+      .icon {
+        margin-right: 10px;
+        min-width: 16px;
+        display: inline-block;
+        text-align: center;
+      }
+
       li {
-        margin-left: -5px;
         list-style-type: disc;
 
         .inner-content {
