--- a/app/styles/service_provider/index.scss
+++ b/app/styles/service_provider/index.scss
@@ -6,8 +6,8 @@
   .service-provider-item {
     display: inline-block;
     padding: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     vertical-align: top;
     border-bottom: 1px solid $gridShadowColor;
 
@@ -41,6 +41,7 @@
     .provider-logo-wrapper {
       text-align: center;
       display: inline-block;
+      float: left;
 
       @media (max-width: $grid-responsive-sm-break) {
         height: 100px;
@@ -62,8 +63,13 @@
     }
 
     .provider-info-wrapper {
-      display: inline-block;
       padding-left: 5px;
+
+      .provider-title,
+      .provider-activity,
+      .provider-schedule {
+        margin-left: 130px;
+      }
     }
 
     .provider-title {
