--- a/app/styles/common/buttons.scss
+++ b/app/styles/common/buttons.scss
@@ -13,7 +13,7 @@
   font-family: Montserrat-Light;
   color: $white;
   width: 100%;
-  background-color: $base-yellow;
+  background-color: $base-orange;
   -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
@@ -48,9 +48,14 @@
   text-transform: uppercase;
 }
 
-.button-energized {
-  border-color: $base-yellow;
-  color: $base-yellow;
+.button.button-energized,
+.button.button-energized.button-outline {
+  border-color: $base-orange;
+  color: $base-orange;
+
+  &.activated {
+    background-color: $base-orange;
+  }
 }
 
 .button-energized,
