--- a/app/styles/common/footer-stripes.scss
+++ b/app/styles/common/footer-stripes.scss
@@ -1,5 +1,5 @@
 .bar-footer-yellow-stripe {
   padding: 3px;
   height: 3px;
-  background-color: $base-yellow;
+  background-color: $base-orange;
 }
