--- a/app/styles/main/main-sidebar.scss
+++ b/app/styles/main/main-sidebar.scss
@@ -50,10 +50,10 @@
   }
 
   .user-type{
-    background: $base-yellow;
+    background: $base-orange;
     color: white;
     a {
-      background: $base-yellow;
+      background: $base-orange;
     }
   }
 
