--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -134,7 +134,8 @@ ion-modal-view.item-form
           accept="image/*"
           multiple
         )
-          .img-placeholder
+          .icon-placeholder-wrapper
+            i.icon.ion-camera
           .img-placeholder--legend {{::("item.addImages"|translate)}}
 
         .row.images-previews
