--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -108,11 +108,31 @@ ion-side-menus(enable-menu-with-back-views='false')
           .item-content
             i.icon.ion-arrow-swap
             | {{::("menu.changeTo"|translate)}}
-        ion-item.user-type(menu-close=''  ui-sref='app.provider.welcome',ng-if='!user.provider_profile')
+        ion-item.user-type(
+          menu-close=''
+          ui-sref='app.provider.welcome'
+          ng-if='!user.provider_profile'
+        )
+          i.icon.ion-pricetags
           | {{::("menu.user.provider"|translate)}}
-        ion-item.user-type(menu-close='' ui-sref='provider.items.index', ng-if='user.provider_profile')
+        ion-item.user-type(
+          menu-close=''
+          ui-sref='provider.items.index'
+          ng-if='user.provider_profile'
+        )
+          i.icon.ion-pricetags
           | {{::("menu.user.provider"|translate)}}
-        ion-item.user-type(menu-close='' ui-sref='app.courier.welcome', ng-if='!user.courier_profile')
+        ion-item.user-type(
+          menu-close=''
+          ui-sref='app.courier.welcome'
+          ng-if='!user.courier_profile'
+        )
+          i.icon.ion-model-s
           | {{::("menu.user.courier"|translate)}}
-        ion-item.user-type(menu-close='' ui-sref='courier.orders', ng-if='user.courier_profile')
+        ion-item.user-type(
+          menu-close=''
+          ui-sref='courier.orders'
+          ng-if='user.courier_profile'
+        )
+          i.icon.ion-model-s
           | {{::("menu.user.courier"|translate)}}
