--- a/app/styles/resource/collection-rounded-containers.scss
+++ b/app/styles/resource/collection-rounded-containers.scss
@@ -1,6 +1,6 @@
 .resource-rounded-container {
   border-radius: 10px;
-  border: 1px solid $base-yellow;
+  border: 1px solid $base-orange;
   font-family: Montserrat-Light;
 
   .container-title {
