--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -93,6 +93,12 @@
     &:hover {
       color: white;
     }
+
+    &.button.activated {
+      color: $base-yellow;
+      border-color: transparent;
+      background-color: $base-orange;
+    }
   }
 }
 
