--- a/app/styles/orders/provider-orders-index-page.scss
+++ b/app/styles/orders/provider-orders-index-page.scss
@@ -18,7 +18,7 @@
     margin-top: 15px;
     cursor: pointer;
     i {
-      color: $base-yellow;
+      color: $base-orange;
       span {
          padding: 5px
       }
