--- a/app/templates/providers/orders/show.jade
+++ b/app/templates/providers/orders/show.jade
@@ -140,6 +140,6 @@ ion-view
           )
             span.message-error
               | {{::("provider.reasonToRejectPlaceholder"|translate)}}
-        button.button.button-block.button-outline.button-assertive(
+        button.button.button-block.button-outline.button-royal(
           ng-click="providerOrderShowVM.rejectOrder()"
         ) {{ ::("provider.rejectOrder" | translate) }}
