--- a/app/styles/tabs/index.scss
+++ b/app/styles/tabs/index.scss
@@ -9,7 +9,7 @@
   line-height: 49px;
   border-style: solid;
   border-bottom-width: 1px;
-  border-bottom-color: $base-yellow;
+  border-bottom-color: $base-orange;
 
   .tab-item{
     cursor: pointer;
@@ -26,7 +26,7 @@
   .tab-item-active{
     opacity: 1;
     border-style: solid !important;
-    border-color: #fbaf3f !important;
+    border-color: $base-orange !important;
     border-width: 0 0 3px 0 !important;
   }
 }
