--- a/app/styles/colors/colors.scss
+++ b/app/styles/colors/colors.scss
@@ -1,9 +1,12 @@
 $white: #fff;
 $base-yellow: #fbaf3f;
 // $base-yellow: #f05a28;
-$base-orange: #f05a28;
+// $base-orange: #f05a28;
+$base-orange: #E65B2E;
 $base-blue: #9ecaed;
 $base-grey: #6A6A6D;
+$base-teal: #0DAA97;
+$base-darkteal: #00324E;
 $grey-secondary: #999;
 $button-red: #D0021B;
 $button-blue: #2D3986;
