--- a/app/styles/common/rows.scss
+++ b/app/styles/common/rows.scss
@@ -1,9 +1,9 @@
 .row {
   .common-text {
     width: 100%;
-    color: $base-grey;
+    color: $base-darkteal;
     text-align: center;
-    font-family: Montserrat-Light;
+    font-family: Montserrat-Regular;
 
     h1, h2, h3, h4, h5, h6 {
       font-family: inherit;
