--- a/app/styles/error/error.scss
+++ b/app/styles/error/error.scss
@@ -29,7 +29,7 @@
     line-height: 1em;
   }
   .error-image {
-    background-image: url("../../images/404.png");
+    background-image: url("../images/404.png");
     background-repeat: no-repeat;
     background-size: contain;
     min-height: 250px;
