--- a/app/styles/fonts/fonts.scss
+++ b/app/styles/fonts/fonts.scss
@@ -17,3 +17,31 @@
   font-family: Montserrat-SemiBold;
   src: URL("../fonts/Montserrat-SemiBold.otf");
 }
+
+
+// new fonts
+
+@font-face {
+  font-family: Galano-Grotesque-Heavy;
+  src: URL("../fonts/Galano-Grotesque-Heavy.otf");
+}
+
+@font-face {
+  font-family: Galano-Grotesque-Medium;
+  src: URL("../fonts/Galano-Grotesque-Medium.otf");
+}
+
+@font-face {
+  font-family: Galano-Grotesque-Light;
+  src: URL("../fonts/Galano-Grotesque-Light.otf");
+}
+
+@font-face {
+  font-family: GochiHand-Regular;
+  src: URL("../fonts/GochiHand-Regular.ttf");
+}
+
+@font-face {
+  font-family: MyriadPro-Regular;
+  src: URL("../fonts/MyriadPro-Regular.otf");
+}
