--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -31,7 +31,7 @@
 }
 
 .bar-stable.bar.bar-header {
-  background: $base-orange;
+  background: $base-darkteal;
 
   .alt-logo {
     height: 35px;
@@ -39,7 +39,7 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('../images/logo-blanco.png');
+    background-image: url('../images/brand/comidomi-horizontal-simple-white.png');
   }
 
   .ion-navicon, .button {
