--- a/app/templates/intro/intro.jade
+++ b/app/templates/intro/intro.jade
@@ -7,7 +7,7 @@ ion-slide-box.intro-slides(on-slide-changed="introVm.slideChanged(index)")
       | compra
     .row.intro-copytext-wrapper
       .intro-copytext
-        | consigue lo que quieras, cuando quieras y donde lo quieras
+        | lo que quieras, cuando lo quieras!
 
   ion-slide
     .list
