--- a/app/templates/profile/info/info.jade
+++ b/app/templates/profile/info/info.jade
@@ -9,7 +9,7 @@ ion-view(
     ng-include(src="'templates/profile/profile.html'")
 
     .list.list-inset.list--no-borders.text-center.actions-wrapper
-      button.button.button-clear.button-positive(
+      button.button.button-clear.button-secondary(
         ng-click="piVm.showNewModal(piVm.user)"
       ) {{::('globals.edit'|translate)}}
 
