--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -1,7 +1,7 @@
 .slider {
   height: 100%;
-  font-family: "Montserrat-Regular";
-  background-image: url('../images/bg.png');
+  background-color: $base-darkteal;
+  position: relative;
 
   .slider-slide {
     padding-top: 3%;
@@ -9,9 +9,26 @@
   }
 }
 
+.slider::before {
+  content: "";
+  background-image: url('../images/bg.png');
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+
+  opacity: 0.5;
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -o-filter: blur(1px);
+  -ms-filter: blur(1px);
+  filter: blur(1px);
+}
+
 .intro-slides {
   .list-logo {
     background-size: contain;
+    margin-bottom: 30px;
 
     &.above {
       height: 180px;
@@ -23,30 +40,25 @@
       top: 140px;
       right: -73px;
     }
-
-    @media (min-height: $grid-responsive-sm-break) {
-      // add some spacing for tall devices
-      margin-bottom: 15px;
-    }
   }
 
   .logo-compra {
     // @include background-centered('../images/logo_compra.png');
-    @include background-centered('../images/brand/vilcabamba-white.png');
+    @include background-centered('../images/brand/comidomilogo-white.png');
   }
   .logo-bolsa {
     @include background-centered('../images/bag.png');
   }
   .logo-envia {
     // @include background-centered('../images/logo_envia.png');
-    @include background-centered('../images/brand/vilcabamba-white.png');
+    @include background-centered('../images/brand/comidomilogo-white.png');
   }
   .logo-cohete {
     @include background-centered('../images/rocket.png');
   }
   .logo-vende {
     // @include background-centered('../images/logo_vende.png');
-    @include background-centered('../images/brand/vilcabamba-white.png');
+    @include background-centered('../images/brand/comidomilogo-white.png');
   }
   .logo-precio {
     @include background-centered('../images/price_tag.png');
@@ -55,18 +67,29 @@
   .intro-title-copytext {
     width: 100%;
     color: $white;
-    font-size: 3.4em;
+    font-size: 5em;
+
+    // var 1
+    // font-family: "Galano-Grotesque-Heavy";
+
+    // var 2
+    font-family: "Galano-Grotesque-Medium";
+    letter-spacing: -2px;
   }
 
   .intro-copytext {
+    font-family: GochiHand-Regular;
+    font-size: 1.4em;
     width: 100%;
     color: $white;
     padding-left: 5%;
     padding-right: 5%;
+    margin-top: 2em;
     border: none;
     background-color: transparent;
-    @media (min-height: 550px) {
-      margin-top: 5%;
+
+    @media (max-height: 550px) {
+      display: none;
     }
   }
 }
@@ -75,7 +98,11 @@
   bottom: 15%;
 
   .slider-pager-page {
-    color: $base-yellow;
+    color: $base-teal;
+  }
+
+  @media (max-height: 550px) {
+    display: none;
   }
 }
 
@@ -99,31 +126,6 @@
       border-color: transparent;
       background-color: $base-orange;
     }
-  }
-}
-
-@media (orientation: landscape) and
-       (max-width: $grid-responsive-lg-break) {
-  .slider {
-    .slider-slide {
-      padding-top: 1%;
-    }
-  }
-
-  .intro-slides {
-    .list-logo {
-      &.above {
-        height: 70px;
-      }
-
-      &.below {
-        height: 80px;
-      }
-    }
-  }
-
-  .slider-pager {
-    bottom: 25%;
   }
 }
 
