--- a/app/styles/tabs/index.scss
+++ b/app/styles/tabs/index.scss
@@ -9,11 +9,11 @@
   line-height: 49px;
   border-style: solid;
   border-bottom-width: 1px;
-  border-bottom-color: $base-orange;
+  border-bottom-color: $base-teal;
 
   .tab-item{
     cursor: pointer;
-    font-family: Montserrat-Regular;
+    font-family: Galano-Grotesque-Heavy;
     font-size: 16px;
     text-transform: uppercase;
     text-align: center;
@@ -26,7 +26,7 @@
   .tab-item-active{
     opacity: 1;
     border-style: solid !important;
-    border-color: $base-orange !important;
+    border-color: $base-teal !important;
     border-width: 0 0 3px 0 !important;
   }
 }
